bases/managers/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  annotations:
    k0s.reynn.net/resource-profile: mid
    k0s.reynn.net/host: mimikyu
spec:
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - name: bazarr
          image: linuxserver/bazarr
          imagePullPolicy: Always
          resources: {}
          ports:
            - containerPort: 6767
              name: tcp-server
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /media/deadpool/downloads
            - name: movies
              mountPath: /media/deadpool/movies
            - name: anime-movies
              mountPath: /media/deadpool/anime_movies
            - name: stand-up
              mountPath: /media/deadpool/stand_up
            - name: animated
              mountPath: /media/deadpool/movies_animated
      volumes:
        - name: downloads
          hostPath:
            path: /media/deadpool/downloads
            type: Directory
        - name: movies
          hostPath:
            path: /media/deadpool/movies
            type: Directory
        - name: anime-movies
          hostPath:
            path: /media/deadpool/anime_movies
            type: Directory
        - name: stand-up
          hostPath:
            path: /media/deadpool/stand_up
            type: Directory
        - name: animated
          hostPath:
            path: /media/deadpool/movies_animated
            type: Directory
        - name: config
          hostPath:
            path: /media/server/bazarr
            type: Directory
