bases/managers/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
spec:
  type: LoadBalancer
  selector:
    app: bazarr
  ports:
    - name: tcp
      protocol: TCP
      port: 6767
      targetPort: 6767
      nodePort: 30767
