bases/managers/bazarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`subs.reynn.dev`)
      kind: Rule
      services:
        - name: bazarr
          port: 6767
      middlewares:
        - name: redirect-to-https
  tls:
    secretName: reynn-dev-ssl
    # secretName: reynn-net-cert
    # options:
    #   name: recommended-tls-opts
    #   namespace: utils
